# cosmokit

./: .gitignore  DOC.md  LICENSE.txt  README.md  hatch.toml  pyproject.toml
src/cosmic/: __about__.py  __init__.py
src/cosmic/adapters/: notifications.py  repository.py
src/cosmic/domain/: messages.py  model.py
src/cosmic/service_layer/: messagebus.py  unit_of_work.py
src/cosmokit/: __init__.py
src/cosmokit/adapters/: repository.py
src/cosmokit/domain/: model.py
src/cosmokit/service_layer/: messagebus.py  unit_of_work.py
tests/: conftest.py  test_domain.py  test_repository.py  test_unit_of_work.py
